--- a/equipe.html
+++ b/equipe.html
@@ -339,8 +339,7 @@
 <div class="row">
 <div class="col-sm-12">
         <h2>CONHEÇA <span>NOSSO TIME</span></h2>
-        <p class="text-center">Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables. Proactively
-          envisioned multimedia based expertise.</p>
+        <p class="text-center">Todos aqueles que fazem parte para que sua empresa lucre mais!</p>
 
 
            <div class="block-grid-md-4 block-grid-sm-2 block-grid-xs-1 team-grid">
@@ -708,9 +707,9 @@
         <div class="col-sm-3">
           <div class="footer-widget">
             <h5>NEWSLETTER</h5>
-            <p>Enter your e-mail and subscribe to our newsletter</p>
+            <p>Digite seu e-mail e assine nossa newsletter</p>
             <div id="mc_embed_signup">
-              <form class="form-inline validate material" action="//audemedia.us7.list-manage.com/subscribe/post?u=b5638e105dac814ad84960d90&amp;id=9345afa0aa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+              <form class="form-inline validate material" action="" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
                 <input id="mce-EMAIL" type="email" name="EMAIL" placeholder="E-mail" required>
                 <div style="position: absolute; left: -5000px;">
                   <input type="text" name="b_b5638e105dac814ad84960d90_9345afa0aa" tabindex="-1" value="">
@@ -725,11 +724,10 @@
     </div>
   </section>
   <!-- END OF FOOTER -->
-
   <div class="copyright">
     <div class="row">
       <div class="col-sm-12">
-        <p class="text-center">Copyright GoodGrowth Inc. All Rights Reserved.</p>
+        <p class="text-center">Copyright Contatos Contabilidade.<br>Todos os direitos reservados.</p>
       </div>
     </div>
   </div>
