--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><span class="typcn typcn-phone-outline"></span> (81) 3136-2356</li>
 								<li><a href="https://www.facebook.com/contatoscont/" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="https://instagram.com/contatos_contabilidade/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-								<li><a href="#" class="danger" data-toggle="popover" data-placement="bottom"><i class="fa fa-calendar"></i></a>
+								<!-- <li><a href="#" class="danger" data-toggle="popover" data-placement="bottom"><i class="fa fa-calendar"></i></a>
 									<div >
 										<div class="body">
 											<div id="calendar" id="" style="display: none">
@@ -47,7 +47,7 @@
 										  </div>
 									</div>
 								
-								</li>
+								</li> -->
 							</ul>
 						</div>
 											
@@ -89,9 +89,9 @@
 													<ul class="nav">
 														<li><a href="#sobre">Quem somos</a></li>
 														<li><a href="historia.html">Nossa história</a></li>
-														<li><a href="cultura.html">Manifesto</a></li>
+														<li><a href="cultura.html#manifesto">Manifesto</a></li>
 														<li><a href="equipe.html">Equipe</a></li>
-														<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+														<!-- <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li> -->
 													</ul>
 												</li>
 												<li>
@@ -169,7 +169,7 @@
 														<li><a href="#">Infográficos</a></li>
 													</ul>
 												</li>
-												<li><a href="#">Blog</a>
+												<!-- <li><a href="#">Blog</a> -->
 												</li>
 												<li><a href="contato.html">Contato</a></li>
 											</ul>
@@ -196,7 +196,7 @@
 											<h2>OTIMIZE A GESTÃO CONTÁBIL DA SUA EMPRESA</h2>
 											<p>Usamos o princípio da confiabilidade como elo fundamental entre a nossa empresa e nossos clientes, 
 												contamos com profissionais altamente capacitados nos diversos departamentos que um escritório contábil necessita.</p>
-											<a href="#servicos" class="hw-btn">Saiba Mais</a>
+											<a href="#servicos" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -214,7 +214,7 @@
 										<div class="hw-the-slider-captions sp-layer" data-show-transition="down" data-show-delay="800">
 											<h2>CONCENTRE-SE EM SEU NEGÓCIO</h2>
 											<p>Nossa visão é que bom assessoramento do empresário nos dias de hoje é o divisor de águas entre o sucesso e o fracasso de uma organização.</p>
-											<a href="#servicos" class="hw-btn">Learn More</a>
+											<a href="#servicos" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -231,8 +231,8 @@
 									<div class="hw-the-slider-container">
 										<div class="hw-the-slider-captions sp-layer" data-show-transition="right" data-show-delay="800">
 											<h2>SOLUÇÕES IDEAIS</h2>
-											<p>dkjlsdv</p>
-											<a href="#servicos" class="hw-btn">Get Started</a>
+											<p>Disponibilizamos uma vasta disponibilidade de serviços contando também com acessoria e consultoria para que sua empresa começe a lucrar mais.</p>
+											<a href="#servicos" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -249,8 +249,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h2>COMO A <span>CONTATOS</span> PODE TE AJUDAR?</h2>
-					<p class="text-center">Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables. Proactively
-						envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing.
+					<p class="text-center">Através de uma vasta cadeia de serviços, a Contatos Contabilidade é uma empresa que pode te ajudar a lucrar mais!
 					</p>
 				</div>
 			</div>
@@ -342,7 +341,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h2>AJUDAMOS A TORNAR AS VIDAS DESTES<span> CLIENTES</span> MAIS FELIZES</h2>
-					<p class="text-center">Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+					<p class="text-center">Algumas das empresas que confiam no nosso trabalho.</p>
 					<div id="clients-carousel" class="owl-carousel">
 						<div class="item">
 							<img src="images/clients/carmen-steffens-logo.png" alt="">
@@ -443,14 +442,14 @@
 				<div class="col-sm-4 col-md-6">
 				</div>
 				<div class="col-sm-8 col-md-6">
-					<h2>THE MOST <span>COST-EFFECTIVE</span> FINANCE SOLUTION</h2>
+					<h2>PERFIL <span> CONTATOS</span> CONTABILIDADE</h2>
 					<div class="row no-gutter wow fadeInUp" data-wow-duration="600ms" data-wow-delay="600ms">
 						<div class="col-sm-9">
 							<div class="numbersbox">
-								<h4>PROMPT AND ACCURATE VALUATIONS</h4>
+								<h4>NOSSO PERFIL EMPRESARIAL</h4>
 								<hr class="small" />
-								<p>Synergistically evolve 2.0 technologies rather than just in time initiatives. Quickly deploy strategic networks with compelling e-business. Credibly pontificate highly efficient manufactured products and enabled data.</p>
-								<p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate.</p>
+								<p>Fundada em 1991 e contendo mais de 20 colaboradores, a empresa se destaca no meio da contabilidade estando entre os 5 melhores escritórios da cidade de Caruaru - PE, prestando serviços de consultoria, acessoria e estruturada em uma planta de mais de 200mt² na principal avenida da cidade.</p>
+								<p>Contamos com uma área disponível para eventos onde um auditório com capacidade de 70 lugares.</p>
 							</div>
 						</div>
 						<div class="col-sm-3">
