--- a/historia.html
+++ b/historia.html
@@ -72,11 +72,11 @@
 												<li class="current">
 													<a href="#">A EMPRESA</a>
 													<ul class="nav">
-														<li><a href="#sobre">Quem somos</a></li>
+														<li><a href="https://contatoscontabilidade.com.br/#sobre">Quem somos</a></li>
 														<li><a href="historia.html">Nossa história</a></li>
 														<li><a href="cultura.html">Manifesto</a></li>
 														<li><a href="equipe.html">Equipe</a></li>
-														<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+														<!-- <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li> -->
 													</ul>
 												</li>
 												<li>
@@ -183,87 +183,133 @@
 			<!-- END OF PAGE HEADER -->
     </div>
     
-	
-		<!-- FOOTER -->
-		<section class="footer">
-			<div class="footer-widgets">
-				<div class="row">
-					<!-- FOOTER WIDGET -->
-					<div class="col-sm-3">
-						<div class="footer-widget">
-							<div class="small-logo"><img src="images/logo-footer.png" alt=""></div>
-							<p>Efficiently enable enabled sources and cost effective products. Completely synthesize principle-centered information after ethical communities.</p>
-							<ul class="social-links">
-								<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" title="Pinterest"><i class="fa fa-pinterest-p"></i></a></li>
-							</ul>
-						</div>
-					</div>
-					<!-- END FOOTER WIDGET -->
-					<!-- FOOTER WIDGET -->
-					<div class="col-sm-3">
-						<div class="footer-widget">
-							<h5>RECENT NEWS</h5>
-							<ul class="posts">
-								<li>
-									<a href="">Front-end processes with effective convergence</a>
-									<span>3 days ago</span>
-								</li>
-								<li>
-									<a href="">User friendly intellectual capital</a>
-									<span>5 days ago</span>
-								</li>
-								<li><a href="">Innovate open-source infrastructures</a>
-									<span>1 month ago</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<!-- END FOOTER WIDGET -->
-					<!-- FOOTER WIDGET -->
-					<div class="col-sm-3">
-						<div class="footer-widget">
-							<h5>LINKS</h5>
-							<ul class="posts">
-								<li><a href="">HOME</a></li>
-								<li><a href="">SERVICES</a></li>
-								<li><a href="">PROJECTS</a></li>
-								<li><a href="">BLOG</a></li>
-								<li><a href="">CONTACT</a></li>
-							</ul>
-						</div>
-					</div>
-					<!-- END FOOTER WIDGET -->
-					<!-- FOOTER WIDGET -->
-					<div class="col-sm-3">
-						<div class="footer-widget">
-							<h5>NEWSLETTER</h5>
-							<p>Enter your e-mail and subscribe to our newsletter</p>
-							<div id="mc_embed_signup">
-								<form class="form-inline validate material" action="//audemedia.us7.list-manage.com/subscribe/post?u=b5638e105dac814ad84960d90&amp;id=9345afa0aa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-									<input id="mce-EMAIL" type="email" name="EMAIL" placeholder="E-mail" required>
-									<div style="position: absolute; left: -5000px;">
-										<input type="text" name="b_b5638e105dac814ad84960d90_9345afa0aa" tabindex="-1" value="">
-									</div>
-									<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="mtr-btn button-blue">
-								</form>
-							</div>
-						</div>
-					</div>
-					<!-- END FOOTER WIDGET -->
-				</div>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div><img src="images/historico.png" alt=""></div>
+				<div><img src="images/sede.png" alt=""></div>
+				<div><img src="images/hoje.png" alt=""></div>
 			</div>
-		</section>
-		<!-- END OF FOOTER -->
-		<div class="copyright">
+
+		</div>
+	</section>
+	<section class="footer">
+		<div class="footer-elements">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center">Copyright GoodGrowth Inc. All Rights Reserved.</p>
+					<div class="row no-gutter">
+						<!-- FOOTER TOP ELEMENT -->
+						<div class="col-sm-2">
+							<div class="footer-element">
+								<span class="typcn typcn-watch"></span>
+								<p>SEGUNDA À SEXTA<span>08:00 - 12:00 / 14:00 - 18:00</span></p>
+							</div>
+						</div>
+						<!-- FOOTER TOP ELEMENT -->
+						<!-- FOOTER TOP ELEMENT -->
+						<div class="col-sm-4">
+							<div class="footer-element">
+								<span class="typcn typcn-location-outline"></span>
+								<p>AGAMENON EMPRESARIAL,<span>AV. AGAMENON MAGALHÃES, 1019, PV 8 SL 802 MAURÍCIO DE NASSAU, CARUARU-PE</span>
+								</p>
+							</div>
+						</div>
+						<!-- FOOTER TOP ELEMENT -->
+						<!-- FOOTER TOP ELEMENT -->
+						<div class="col-sm-4">
+							<div class="footer-element">
+								<span class="typcn typcn-mail"></span>
+								<p>POR <br>E-MAIL:<span><a href="">
+									CONTATO@CONTATOSCONTABILIDADE.COM.BR</a></span>
+								</p>
+							</div>
+						</div>
+						<!-- FOOTER TOP ELEMENT -->
+						<!-- FOOTER TOP ELEMENT -->
+						<div class="col-sm-2">
+							<div class="footer-element">
+								<span class="typcn typcn-phone-outline"></span>
+								<p>POR<br>TELEFONE:<span>
+									(81) 3136-2356
+									</span>
+								</p>
+							</div>
+						</div>
+						<!-- FOOTER TOP ELEMENT -->
+					</div>
 				</div>
 			</div>
 		</div>
+		<div class="footer-widgets">
+			<div class="row">
+				<!-- FOOTER WIDGET -->
+				<div class="col-sm-3">
+					<div class="footer-widget">
+						<div class="small-logo"><img src="images/contatos-white.png" alt=""></div>
+						<p>Presente no mercado de Caruaru e Região Agreste de Pernambuco desde 1991, a Contatos Contabilidade atua de forma singular prestando serviços contábeis com qualidade e eficiência.</p>
+						<ul class="social-links">
+							<li><a href="https://fb.com/contatoscont" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://instagram.com/contatos_contabilidade" target="_blank" title="Linkedin"><i class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- END FOOTER WIDGET -->
+				<!-- FOOTER WIDGET -->
+				<div class="col-sm-3">
+					<div class="footer-widget">
+						<h5>ACESSO RÁPIDO</h5>
+						<ul class="posts">
+							<li><a href="">JUCEPE</a></li>
+							<li><a href="">SEFAZ</a></li>
+							<li><a href="">MINISTÉRIO DO TRABALHO</a></li>
+							<li><a href="">CAIXA</a></li>
+							<li><a href="">RECEITA FEDERAL</a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- END FOOTER WIDGET -->
+				<!-- FOOTER WIDGET -->
+				<div class="col-sm-3">
+					<div class="footer-widget">
+						<h5>LINKS</h5>
+						<ul class="posts">
+							<li><a href="#hw-hero">HOME</a></li>
+							<li><a href="#servicos">SERVIÇOS</a></li>
+							<li><a href="cultura.html">CULTURA</a></li>
+							<li><a href="">BLOG</a></li>
+							<li><a href="contato.html">CONTATO</a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- END FOOTER WIDGET -->
+				<!-- FOOTER WIDGET -->
+				<div class="col-sm-3">
+					<div class="footer-widget">
+						<h5>NEWSLETTER</h5>
+						<p>Digite seu e-mail e assine nossa newsletter</p>
+						<div id="mc_embed_signup">
+							<form class="form-inline validate material" action="" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+								<input id="mce-EMAIL" type="email" name="EMAIL" placeholder="E-mail" required>
+								<div style="position: absolute; left: -5000px;">
+									<input type="text" name="b_b5638e105dac814ad84960d90_9345afa0aa" tabindex="-1" value="">
+								</div>
+								<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="mtr-btn button-blue">
+							</form>
+						</div>
+					</div>
+				</div>
+				<!-- END FOOTER WIDGET -->
+			</div>
+		</div>
+	</section>
+	<!-- END OF FOOTER -->
+	<div class="copyright">
+		<div class="row">
+			<div class="col-sm-12">
+				<p class="text-center">Copyright Contatos Contabilidade.<br>Todos os direitos reservados.</p>
+			</div>
+		</div>
+	</div>
 		<a href="#top" id="back-to-top"><i class="fa fa-angle-up"></i></a>
 		<!-- JAVASCRIPT FILES -->
 		<script src="js/jquery.min.js"></script>
