--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Home | Contatos Contabilidade</title>
-		<link rel="shortcut icon" href="images/favicon.png" />
+		<link rel="shortcut icon" href="images/ico.png" />
 		<!-- GOOGLE WEB FONTS -->
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -23,6 +23,26 @@
 		<link href="css/slicknav.min.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
 		<!-- END OF BOOTSTRAP & STYLES -->
+		<script src="//code.jivosite.com/widget/iAnmzwXfrJ" async></script>
+
+		<meta name="description" content="A Contatos Contabilidade acompanha a evolução do mercado, identificando os procedimentos que ajudem os empresários gerenciar seus negócios através da antecipação de necessidades, usando a expertise dos seus profissionais e a tecnologia. Sempre preparada para oferecer soluções em contabilidade.">
+		<meta name="author" content="Contatos Contabilidade">
+		<meta name="keywords" content="contabilidade, consultoria, economia, Planejamento Tributário, Consultoria Contábil, Consultoria Fiscal, Contabilidade Gerencial, 
+		Consultoria Trabalhista, Consultoria Societária">
+		<meta name="creator" content="Khenysson Vasconcelos">
+		<meta http-equiv="content-language" content="pt-br">
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta property="og:locale" content="pt_BR">
+		<meta property="og:type" content="website">
+		<meta property="article:author" content="https://www.contatoscontabilidade.com.br/">
+		<meta property="og:title" content="Há 29 anos no mercado trazendo soluções inovadoras para nossos clientes.">
+		<meta property="og:description" content="A Contatos Contabilidade acompanha a evolução do mercado, identificando os procedimentos que ajudem os empresários gerenciar seus negócios através da antecipação de necessidades, usando a expertise dos seus profissionais e a tecnologia. Sempre preparada para oferecer soluções em contabilidade.">
+		<meta property="og:url" content="https://www.contatoscontabilidade.com.br/">
+		<meta property="og:site_name" content="Há 29 anos no mercado trazendo soluções inovadoras para nossos clientes.">
+		<meta property="og:image" content="www.contatoscontabilidade.com.br/images/ico.png">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="1061">
+		<meta property="og:image:height" content="371">
 	</head>
 	<body>
 		<!-- HEADER -->
@@ -70,7 +90,7 @@
 					</form>
 					</div> -->
 				<!-- END OF SEARCH FORM -->
-				<!-- LOGO & NAVIGATION -->
+				  <!-- LOGO & NAVIGATION -->
 				<div class="header-navigation">
 					<div class="row">
 						<div class="col-sm-12">
@@ -87,7 +107,7 @@
 												<li class="current">
 													<a href="#">A EMPRESA</a>
 													<ul class="nav">
-														<li><a href="#sobre">Quem somos</a></li>
+														<li><a href="index.html#sobre">Quem somos</a></li>
 														<li><a href="historia.html">Nossa história</a></li>
 														<li><a href="cultura.html#manifesto">Manifesto</a></li>
 														<li><a href="equipe.html">Equipe</a></li>
@@ -97,12 +117,12 @@
 												<li>
 													<a href="#">SERVIÇOS</a>
 													<ul class="nav">
-														<li><a href="#planejamento-tributario">Planejamento Tributário</a></li>
-														<li><a href="#consultoria-contabil">Consultoria Contábil</a></li>
-														<li><a href="#consultoria-fiscal">Consultoria Fiscal</a></li>
-														<li><a href="#contabilidade-gerencial">Contabilidade Gerencial</a></li>
-														<li><a href="#consultoria-trabalhista">Consultoria Trabalhista</a></li>
-														<li><a href="#consultoria-societaria">Consultoria Societária </a></li>
+														<li><a href="index.html#planejamento-tributario">Planejamento Tributário</a></li>
+														<li><a href="index.html#consultoria-contabil">Consultoria Contábil</a></li>
+														<li><a href="index.html#consultoria-fiscal">Consultoria Fiscal</a></li>
+														<li><a href="index.html#contabilidade-gerencial">Contabilidade Gerencial</a></li>
+														<li><a href="index.html#consultoria-trabalhista">Consultoria Trabalhista</a></li>
+														<li><a href="index.html#consultoria-societaria">Consultoria Societária </a></li>
 													</ul>
 												</li>
 												<li>
@@ -160,7 +180,7 @@
 													  <li><a href="shop-cart.html">Shop Cart</a></li>
 													</ul>
 													</li> -->
-												<li>
+												<!--<li>
 													<a href="#">Conteúdo</a>
 													<ul>
 														<li><a href="#">Vídeos</a></li>
@@ -168,9 +188,10 @@
 														<li><a href="#">Ebook's</a></li>
 														<li><a href="#">Infográficos</a></li>
 													</ul>
-												</li>
+												</li>-->
 												<!-- <li><a href="#">Blog</a> -->
-												</li>
+                        </li>
+                        <li><a target="_blank" href="https://blog.contatoscontabilidade.com.br">Blog</a></li>
 												<li><a href="contato.html">Contato</a></li>
 											</ul>
 										</nav>
@@ -181,6 +202,7 @@
 					</div>
 				</div>
 				<!-- END OF LOGO & NAVIGATION -->
+      </div>
 			</div>
 			<!-- SLIDER -->
 			<div class="slider-pro" id="index-slider">
@@ -196,7 +218,7 @@
 											<h2>OTIMIZE A GESTÃO CONTÁBIL DA SUA EMPRESA</h2>
 											<p>Usamos o princípio da confiabilidade como elo fundamental entre a nossa empresa e nossos clientes, 
 												contamos com profissionais altamente capacitados nos diversos departamentos que um escritório contábil necessita.</p>
-											<a href="#servicos" class="hw-btn">Entre em contato</a>
+											<a href="contato.html" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -214,7 +236,7 @@
 										<div class="hw-the-slider-captions sp-layer" data-show-transition="down" data-show-delay="800">
 											<h2>CONCENTRE-SE EM SEU NEGÓCIO</h2>
 											<p>Nossa visão é que bom assessoramento do empresário nos dias de hoje é o divisor de águas entre o sucesso e o fracasso de uma organização.</p>
-											<a href="#servicos" class="hw-btn">Entre em contato</a>
+											<a href="contato.html" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -231,8 +253,8 @@
 									<div class="hw-the-slider-container">
 										<div class="hw-the-slider-captions sp-layer" data-show-transition="right" data-show-delay="800">
 											<h2>SOLUÇÕES IDEAIS</h2>
-											<p>Disponibilizamos uma vasta disponibilidade de serviços contando também com acessoria e consultoria para que sua empresa começe a lucrar mais.</p>
-											<a href="#servicos" class="hw-btn">Entre em contato</a>
+											<p>Disponibilizamos uma vasta disponibilidade de serviços contando também com assessoria e consultoria para que sua empresa começe a lucrar mais.</p>
+											<a href="contato.html" class="hw-btn">Entre em contato</a>
 										</div>
 									</div>
 								</div>
@@ -347,13 +369,7 @@
 							<img src="images/clients/carmen-steffens-logo.png" alt="">
 						</div>
 						<div class="item">
-							<img src="images/clients/boi-brasa.png" alt="">
-						</div>
-						<div class="item">
 							<img src="images/clients/liberdade.png" alt="">
-						</div>
-						<div class="item">
-							<img src="images/clients/uai.png" alt="">
 						</div>
 						<div class="item">
 							<img src="images/clients/moto-arte.png" alt="">
@@ -363,9 +379,6 @@
 						</div>
 						<div class="item">
 							<img src="images/clients/fabiano.png" alt="">
-						</div>
-						<div class="item">
-							<img src="images/clients/buzzlab.png" alt="">
 						</div>
 						<div class="item">
 							<img src="images/clients/casas-almy.png" alt="">
@@ -448,7 +461,7 @@
 							<div class="numbersbox">
 								<h4>NOSSO PERFIL EMPRESARIAL</h4>
 								<hr class="small" />
-								<p>Fundada em 1991 e contendo mais de 20 colaboradores, a empresa se destaca no meio da contabilidade estando entre os 5 melhores escritórios da cidade de Caruaru - PE, prestando serviços de consultoria, acessoria e estruturada em uma planta de mais de 200mt² na principal avenida da cidade.</p>
+								<p>Fundada em 1991 e contendo mais de 20 colaboradores, a empresa se destaca no meio da contabilidade estando entre os 5 melhores escritórios da cidade de Caruaru - PE, prestando serviços de consultoria, acessoria e estruturada em uma planta de mais de 280mt² na principal avenida da cidade.</p>
 								<p>Contamos com uma área disponível para eventos onde um auditório com capacidade de 70 lugares.</p>
 							</div>
 						</div>
@@ -472,7 +485,7 @@
 									<div class="" style=" top: -3px !important; position: relative; color:#fff; font-size:24px; font-weight:900; font-family: 'Lato', Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; margin:0; padding:0;" >+</div>
 									<div id="odometer3" class="odometer"></div>
 									</div>
-									<div class="numbername">CLIENTES FELIZES</div>
+									<div class="numbername">CLIENTES</div>
 								</div>
 								<!-- <div class="number">
 									<div style="display: inline-flex !important;">
@@ -518,7 +531,7 @@
 								<div class="footer-element">
 									<span class="typcn typcn-mail"></span>
 									<p>POR <br>E-MAIL:<span><a href="">
-										CONTATO@CONTATOSCONTABILIDADE.COM.BR</a></span>
+										ATENDIMENTO@CONTATOSCONTABILIDADE.COM.BR</a></span>
 									</p>
 								</div>
 							</div>
@@ -557,11 +570,11 @@
 						<div class="footer-widget">
 							<h5>ACESSO RÁPIDO</h5>
 							<ul class="posts">
-								<li><a href="">JUCEPE</a></li>
-								<li><a href="">SEFAZ</a></li>
-								<li><a href="">MINISTÉRIO DO TRABALHO</a></li>
-								<li><a href="">CAIXA</a></li>
-								<li><a href="">RECEITA FEDERAL</a></li>
+								<li><a target="_blank" href="http://portal.jucepe.pe.gov.br/">JUCEPE</a></li>
+								<li><a target="_blank" href="https://www.sefaz.pe.gov.br/">SEFAZ</a></li>
+								<li><a target="_blank" href="http://trabalho.gov.br/">MINISTÉRIO DO TRABALHO</a></li>
+								<li><a target="_blank" href="https://caixa.gov.br">CAIXA</a></li>
+								<li><a target="_blank" href="https://receita.economia.gov.br/">RECEITA FEDERAL</a></li>
 							</ul>
 						</div>
 					</div>
@@ -574,14 +587,14 @@
 								<li><a href="#hw-hero">HOME</a></li>
 								<li><a href="#servicos">SERVIÇOS</a></li>
 								<li><a href="cultura.html">CULTURA</a></li>
-								<li><a href="">BLOG</a></li>
+								<li><a href="https://blog.contatoscontabilidade.com.br">BLOG</a></li>
 								<li><a href="contato.html">CONTATO</a></li>
 							</ul>
 						</div>
 					</div>
 					<!-- END FOOTER WIDGET -->
 					<!-- FOOTER WIDGET -->
-					<div class="col-sm-3">
+					<!--<div class="col-sm-3">
 						<div class="footer-widget">
 							<h5>NEWSLETTER</h5>
 							<p>Digite seu e-mail e assine nossa newsletter</p>
@@ -595,7 +608,7 @@
 								</form>
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<!-- END FOOTER WIDGET -->
 				</div>
 			</div>
@@ -604,7 +617,8 @@
 		<div class="copyright">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center">Copyright Contatos Contabilidade.<br>Todos os direitos reservados.</p>
+					<p class="text-center">Copyright 2020 Contatos Contabilidade.<br>Todos os direitos reservados.</p>
+        <p class="text-center">Desenvolvido por <a target="_blank" style="color: #28CB75;" href="https://keywerty.co">KeywertyCo.</a></p>
 				</div>
 			</div>
 		</div>
@@ -692,7 +706,7 @@
 			    $('.odometer').waypoint(function() {
 			
 			      setTimeout(function() {
-			        $('#odometer1.odometer').html(28);
+			        $('#odometer1.odometer').html(29);
 			      }, 500);
 			
 			      setTimeout(function() {
