--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Trabalhe Conosco | Contatos Contabilidade</title>
-  <link rel="shortcut icon" href="images/favicon.png" />
+  <link rel="shortcut icon" href="images/ico.png" />
   <!-- GOOGLE WEB FONTS -->
   <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -25,6 +25,7 @@
   <link href="css/slicknav.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <!-- END OF BOOTSTRAP & STYLES -->
+  <script src="//code.jivosite.com/widget/iAnmzwXfrJ" async></script>
 </head>
 
 <body>
@@ -63,113 +64,117 @@
       <!-- END OF SEARCH FORM -->
 
       <!-- LOGO & NAVIGATION -->
-      <div class="header-navigation">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="logonav">
-            <div class="row no-gutter">
-              <div class="col-sm-3">
-                <div class="logo">
-                  <a href="index.html"><img class="img-responsive" style="width: 160px; height: auto;" src="images/logo (2).png" alt="" /></a>
-                </div>
-              </div>
-              <div class="col-sm-9">
-                <nav id="desktop-menu">
-                  <ul class="sf-menu" id="navigation">
-                    <li class="current"><a href="#">A EMPRESA</a>
-                      <ul class="nav">
-                        <li><a href="index.html#sobre">Quem somos</a></li>
-                        <li><a href="index2.html">Nossa história</a></li>
-                        <li><a href="index2.html">Manifesto</a></li>
-                        <li><a href="equipe.html">Equipe</a></li>
-                        <li><a href="equipe.html">Trabalhe Conosco</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">SERVIÇOS</a>
-                      <ul class="nav">
-                        <li><a href="index.html#planejamento-tributario">Planejamento Tributário</a></li>
-                        <li><a href="index.html#consultoria-contabil">Consultoria Contábil</a></li>
-                        <li><a href="index.html#consultoria-fiscal">Consultoria Fiscal</a></li>
-                        <li><a href="index.html#contabilidade-gerencial">Contabilidade Gerencial</a></li>
-                        <li><a href="index.html#consultoria-trabalhista">Consultoria Trabalhista</a></li>
-                        <li><a href="index.html#consultoria-societaria">Consultoria Societária </a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">CULTURA</a>
-                      <ul>
-                        <li><a href="index.html#servicos">MISSÃO</a></li>
-                        <li><a href="index.html#servicos">VISÃO</a></li>
-                        <li><a href="index.html#servicos">VALORES</a></li>
-                      </ul>
-                    </li>
-                        <!-- <li><a href="#">About Us</a>
-                        <ul>
-                        <li><a href="about1.html">About Us 1</a></li>
-                        <li><a href="about2.html">About Us 2</a></li>
-                      </ul>
+				<div class="header-navigation">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="logonav">
+								<div class="row no-gutter">
+									<div class="col-sm-3">
+										<div class="logo">
+											<a href="index.html"><img class="img-responsive" style="width: 160px; height: auto;" src="images/logo (2).png" alt="" /></a>
+										</div>
+									</div>
+									<div class="col-sm-9">
+										<nav id="desktop-menu">
+											<ul class="sf-menu" id="navigation">
+												<li class="current">
+													<a href="#">A EMPRESA</a>
+													<ul class="nav">
+														<li><a href="#sobre">Quem somos</a></li>
+														<li><a href="historia.html">Nossa história</a></li>
+														<li><a href="cultura.html#manifesto">Manifesto</a></li>
+														<li><a href="equipe.html">Equipe</a></li>
+														<!-- <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li> -->
+													</ul>
+												</li>
+												<li>
+													<a href="#">SERVIÇOS</a>
+													<ul class="nav">
+														<li><a href="#planejamento-tributario">Planejamento Tributário</a></li>
+														<li><a href="#consultoria-contabil">Consultoria Contábil</a></li>
+														<li><a href="#consultoria-fiscal">Consultoria Fiscal</a></li>
+														<li><a href="#contabilidade-gerencial">Contabilidade Gerencial</a></li>
+														<li><a href="#consultoria-trabalhista">Consultoria Trabalhista</a></li>
+														<li><a href="#consultoria-societaria">Consultoria Societária </a></li>
+													</ul>
+												</li>
+												<li>
+													<a href="#">CULTURA</a>
+													<ul>
+														<li><a href="cultura.html">MISSÃO</a></li>
+														<li><a href="cultura.html">VISÃO</a></li>
+														<li><a href="cultura.html">VALORES</a></li>
+													</ul>
+												</li>
+												<!-- <li><a href="#">About Us</a>
+													<ul>
+													<li><a href="about1.html">About Us 1</a></li>
+													<li><a href="about2.html">About Us 2</a></li>
+													</ul>
+													</li>
+													<li><a href="page-left-sidebar.html">Page Left Sidebar</a></li>
+													<li><a href="page-right-sidebar.html">Page Right Sidebar</a></li>
+													<li><a href="faq.html">FAQ</a></li>
+													<li><a href="404.html">404</a></li> -->
+												<!-- <li><a href="#">CULTURA</a>
+													<ul>
+													  <li><a href="#">HTML</a>
+													  <ul>
+													  <li><a href="shortcodes-columns.html">Columns</a></li>
+													  <li><a href="shortcodes-typography.html">Typography</a></li>
+													  <li><a href="shortcodes-alerts.html">Alerts</a></li>
+													  <li><a href="shortcodes-blockquotes.html">Blockquotes</a></li>
+													  <li><a href="shortcodes-buttons.html">Buttons</a></li>
+													  <li><a href="shortcodes-icon-boxes.html">Icon Boxes</a></li>
+													</ul>
+													  </li>
+													  <li><a href="#">Interactive</a>
+													  <ul>
+													  <li><a href="shortcodes-accordions.html">Accordions</a></li>
+													  <li><a href="shortcodes-call-to-actions.html">Call to Actions</a></li>
+													  <li><a href="shortcodes-pricing-tables.html">Pricing Tables</a></li>
+													</ul>
+													  </li>
+													  <li><a href="#">Javascript</a>
+													  <ul>
+													   <li><a href="shortcodes-counters.html">Counters</a></li>
+													   <li><a href="shortcodes-progressbars.html">Progress Bars</a></li>
+													   <li><a href="shortcodes-tabs.html">Tabs</a></li>
+													</ul>
+													  </li>
+													</ul>
+													</li> -->
+												<!-- <li><a href="#">Shop</a>
+													<ul>
+													  <li><a href="shop-category.html">Shop Category Right Sidebar</a></li>
+													  <li><a href="shop-category-left-sidebar.html">Shop Category Left Sidebar</a></li>
+													  <li><a href="shop-category-full-width.html">Shop Category Full Width</a></li>
+													  <li><a href="shop-single.html">Shop Single</a></li>
+													  <li><a href="shop-cart.html">Shop Cart</a></li>
+													</ul>
+													</li> -->
+												<!--<li>
+													<a href="#">Conteúdo</a>
+													<ul>
+														<li><a href="#">Vídeos</a></li>
+														<li><a href="#">Podcasts</a></li>
+														<li><a href="#">Ebook's</a></li>
+														<li><a href="#">Infográficos</a></li>
+													</ul>
+												</li>-->
+												<!-- <li><a href="#">Blog</a> -->
                         </li>
-                        <li><a href="page-left-sidebar.html">Page Left Sidebar</a></li>
-                        <li><a href="page-right-sidebar.html">Page Right Sidebar</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="404.html">404</a></li> -->
-                    <!-- <li><a href="#">CULTURA</a>
-                      <ul>
-                        <li><a href="#">HTML</a>
-                        <ul>
-                        <li><a href="shortcodes-columns.html">Columns</a></li>
-                        <li><a href="shortcodes-typography.html">Typography</a></li>
-                        <li><a href="shortcodes-alerts.html">Alerts</a></li>
-                        <li><a href="shortcodes-blockquotes.html">Blockquotes</a></li>
-                        <li><a href="shortcodes-buttons.html">Buttons</a></li>
-                        <li><a href="shortcodes-icon-boxes.html">Icon Boxes</a></li>
-                      </ul>
-                        </li>
-                        <li><a href="#">Interactive</a>
-                        <ul>
-                        <li><a href="shortcodes-accordions.html">Accordions</a></li>
-                        <li><a href="shortcodes-call-to-actions.html">Call to Actions</a></li>
-                        <li><a href="shortcodes-pricing-tables.html">Pricing Tables</a></li>
-                      </ul>
-                        </li>
-                        <li><a href="#">Javascript</a>
-                        <ul>
-                         <li><a href="shortcodes-counters.html">Counters</a></li>
-                         <li><a href="shortcodes-progressbars.html">Progress Bars</a></li>
-                         <li><a href="shortcodes-tabs.html">Tabs</a></li>
-                      </ul>
-                        </li>
-                      </ul>
-                    </li> -->
-                    <!-- <li><a href="#">Shop</a>
-                      <ul>
-                        <li><a href="shop-category.html">Shop Category Right Sidebar</a></li>
-                        <li><a href="shop-category-left-sidebar.html">Shop Category Left Sidebar</a></li>
-                        <li><a href="shop-category-full-width.html">Shop Category Full Width</a></li>
-                        <li><a href="shop-single.html">Shop Single</a></li>
-                        <li><a href="shop-cart.html">Shop Cart</a></li>
-                      </ul>
-                    </li> -->
-                    <li><a href="#">Conteúdo</a>
-                      <ul>
-                        <li><a href="#">Vídeos</a></li>
-                        <li><a href="#">Podcasts</a></li>
-                        <li><a href="#">Ebook's</a></li>
-                        <li><a href="#">Infográficos</a></li>
-                      </ul>
-                    </li>
-
-                    <li><a href="#">Blog</a>
-                    </li>
-                    <li><a href="contato.html">Contato</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-      <!-- END OF LOGO & NAVIGATION -->
+                        <li><a target="_blank" href="https://blog.contatoscontabilidade.com.br">Blog</a></li>
+												<li><a href="contato.html">Contato</a></li>
+											</ul>
+										</nav>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- END OF LOGO & NAVIGATION -->
     </div>
 
     <!-- PAGE HEADER -->
